force-app/main/default/objects/Trivia_Answer_Choice__c/Trivia_Answer_Choice__c.object-meta.xml
<CustomObject>
    <description>Master-detail child of a Trivia Question.</description>
    <label>Trivia Answer Choice</label>
    <nameField>
        <label>Trivia Answer Choice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Answer Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>