force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Choice_Label__c.field-meta.xml
<CustomField>
    <fullName>Choice_Label__c</fullName>
    <label>Choice Label</label>
    <type>Text</type>
    <length>4</length>
</CustomField>