force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Choice_Text__c.field-meta.xml
<CustomField>
    <fullName>Choice_Text__c</fullName>
    <label>Choice Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>