force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Direct_Statement__c.field-meta.xml
<CustomField>
    <fullName>Direct_Statement__c</fullName>
    <description
    >A standalone factual statement about this choice (true for correct, false for incorrect). Used for analytics and flashcards.</description>
    <inlineHelpText
    >Standalone fact about this option (e.g. &quot;Role hierarchy opens upward access&quot;).</inlineHelpText>
    <label>Direct Statement</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>