force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Misconception_Tag__c.field-meta.xml
<CustomField>
    <fullName>Misconception_Tag__c</fullName>
    <description>Short classifier (e.g. &quot;confuses-OWD-with-Sharing-Rules&quot;) used to roll up the most common wrong-answer patterns per user.</description>
    <inlineHelpText>Short classifier for the misconception that leads to this wrong answer.</inlineHelpText>
    <label>Misconception Tag</label>
    <length>120</length>
    <type>Text</type>
</CustomField>