force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Trivia_Question__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Question__c</fullName>
    <label>Trivia Question</label>
    <referenceTo>Trivia_Question__c</referenceTo>
    <relationshipLabel>Trivia Question</relationshipLabel>
    <relationshipName>Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>