force-app/main/default/objects/Trivia_Answer_Choice__c/fields/Why_Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Why_Incorrect__c</fullName>
    <description>Explicit explanation of why this choice is wrong (only set when isCorrect=false). Surfaced on the result card if the user picked it.</description>
    <inlineHelpText>Why this answer is wrong. Shown after a player picks it.</inlineHelpText>
    <label>Why Incorrect</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>